--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,8 +10,9 @@
   "dependencies": {
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
+    "pinia": "^2.1.7",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.3.4",
