--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,7 +12,8 @@
     "bootstrap": "^5.3.2",
     "pinia": "^2.1.7",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.3.4",
