--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "pinia": "^2.1.7",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5",
