--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.3",
+    "chartjs-adapter-date-fns": "^3.0.0",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
     "pinia": "^2.1.7",
