--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -8,14 +8,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "axios": "^1.5.1",
-    "bootstrap": "^5.3.2",
+    "bootstrap": "^5.3.3",
     "chart.js": "^4.4.3",
     "chartjs-adapter-date-fns": "^3.0.0",
     "date-fns": "^3.6.0",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
     "vue": "^3.3.4",
+    "vue-chartjs": "^5.3.1",
     "vue-router": "^4.2.5",
     "vuex": "^4.1.0",
     "xlsx": "^0.18.5"
